--- a/app/globals.css
+++ b/app/globals.css
@@ -138,4 +138,24 @@
     width: 15px;
     background-color: white;
   }
+
+  .listing-details-list {
+    @apply flex flex-col gap-3 w-full;
+  }
+
+  .listing-details-list-item {
+    @apply flex flex-row gap-3 items-center bg-slate-300 dark:bg-slate-800 shadow-md py-2 pl-2 pr-3 rounded-md;
+  }
+
+  .listing-details-list-item-icon {
+    @apply bg-slate-400 dark:bg-slate-600 p-2 rounded-sm flex items-center justify-center;
+  }
+
+  .listing-details-list-item-text-heading {
+    @apply text-xs font-light text-slate-500 dark:text-slate-400;
+  }
+
+  .listing-details-list-item-text-data {
+    @apply font-medium;
+  }
 }
